--- a/WordGenerator/Makefile
+++ b/WordGenerator/Makefile
@@ -1,6 +1,6 @@
 #Pour le partage de fichier ne pas oublier de mettre sudo pour etre le root mount -t vboxsf Partage_virtual_box ~/Desktop/Partage
 exe: main.cpp vecteurLettre.h vecteurLettre.cpp matriceMot.h matriceMot.cpp corpus.h corpus.cpp
-	g++ main.cpp vecteurLettre.h vecteurLettre.cpp matriceMot.h matriceMot.cpp corpus.h corpus.cpp -o exe -lsfml-graphics -lsfml-window -lsfml-system
+	g++ -o main2 main2.cpp vecteurLettre.cpp matriceMot.cpp corpus.cpp 
 
 #~/.local/bin/jupyter-notebook
 ## test pour lancer le truc graphique  pour la premiere ligne pas de tabulation pour la deuxième si.
