markov chain order 2

--- a/WordGenerator/Makefile
+++ b/WordGenerator/Makefile
@@ -1,9 +1,10 @@
-#Pour le partage de fichier ne pas oublier de mettre sudo pour etre le root mount -t vboxsf Partage_virtual_box ~/Desktop/Partage
-exe: main2.cpp vecteurLettre.h vecteurLettre.cpp matriceMot.h matriceMot.cpp tensorMot.h tensorMot.cpp corpus.h corpus.cpp
-	g++ -o main2 main2.cpp vecteurLettre.cpp matriceMot.cpp tensorMot.cpp corpus.cpp 
 
-#~/.local/bin/jupyter-notebook
-## test pour lancer le truc graphique  pour la premiere ligne pas de tabulation pour la deuxième si.
-#Il n'yaura plus qu'à alncer l programme noralement en rajoutant les lsfml à la fin
-#executable : test.cpp
-#	g++ test.cpp -o executable -lsfml-graphics -lsfml-window -lsfml-system    #on lance l'exe avec les bonnes bibli
+
+
+
+
+
+
+exe: main2.cpp vecteurTransition.h vecteurTransition.cpp matriceMot.h matriceMot.cpp tensorMot.h tensorMot.cpp corpus.h corpus.cpp
+	g++ -o main2 main2.cpp vecteurTransition.cpp matriceMot.cpp tensorMot.cpp corpus.cpp 
+
