generation de mots ordre 1 et 2

--- a/WordGenerator/Makefile
+++ b/WordGenerator/Makefile
@@ -5,6 +5,6 @@
 
 
 
-exe: main2.cpp vecteurTransition.h vecteurTransition.cpp matriceMot.h matriceMot.cpp tensorMot.h tensorMot.cpp corpus.h corpus.cpp
-	g++ -o main2 main2.cpp vecteurTransition.cpp matriceMot.cpp tensorMot.cpp corpus.cpp 
+exe: main.cpp vecteurTransition.h vecteurTransition.cpp matriceMot.h matriceMot.cpp tensorMot.h tensorMot.cpp corpus.h corpus.cpp misc.h misc.cpp
+	g++ -o main main.cpp vecteurTransition.cpp matriceMot.cpp tensorMot.cpp corpus.cpp  misc.cpp
 
